# bashkirtseff

./: .clinerules  .gitignore  .plan.md  .roomodes  BOOK12_ACTION_PLAN.md  BOOK12_PARAGRAPH_ID_ANALYSIS.md  BOOK12_QUICK_REFERENCE.txt  BOOK12_RENUMBERING_MAP.txt  BOOK12_RENUMBERING_MAP_FIXED.txt  BOOK12_SUMMARY_TABLE.txt  BOOK12_VERIFICATION_REPORT.txt  BOOK12_VERIFICATION_SUMMARY.md  CLAUDE.md  CONTRIBUTING.md  Claude.md  Cline.md  DIAGNOSTICS_REPORT.md  EPUB_ANALYSIS_PLAN.md  LICENSE  PARAGRAPHS_TO_CHECK.md  Plan.md  README.md  README_UV.md  REPORT_DIAGNOSTICS.md  REPORT_EPUB_ANALYSIS.md  REPORT_GLOSSARY.md  TEAM-REPORT.md  VERIFICATION_BOOK12_FAILED.txt  carnets-plan.md  justfile  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  team-report.md  vibe-tools.config.json
.claude/: WORKER_CONFIG.yaml.template  project_config.md  prompt_history.md  settings.json  settings.local.json
.github/: FUNDING.yml
content/: CLAUDE.md  HASHTAGS.md  Style.md
docs/: 2026-01-30-node-conversion.md  ADDING_LANGUAGES.md  FRONTMATTER.md  INFRASTRUCTURE.md  MANIFESTO.md  STEWARDSHIP.md  TAILSCALE_STABLE_HOSTNAME.md  digital-humanities.md  full-frontend-spec.md  test-highlighting.md  ukraine.md  uncensored_diary_discovery_narrative.md  working_with_tags.md  Україна.md
frontend/: CLAUDE.md  Dockerfile  README.md  astro.config.mjs  docker-compose.yml  nginx.conf  package.json
memlog/: 2025-01-14-book06-processing-started.md  2025-01-15-parallel-processing-books-6-7-8.md  2025-01-17-book06-november-1875-progress.md  2025-03-23-plan.md  (+148 more)
(+18811 files in other folders)
