[tool.poetry]
name = "coslate-bashkirtseff"
version = "0.1.0"
description = "Translation project for Marie Bashkirtseff's diary"
authors = ["Coslate by kerray.cz <kerray@kerray.cz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
markdown = "^3.5"
jinja2 = "^3.1.2"
pyyaml = "^6.0"
ebooklib = "^0.18"
beautifulsoup4 = "^4.12.2"
typer = "^0.9.0"
rich = "^13.6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.9.1"
isort = "^5.12.0"
mypy = "^1.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
